update api docs
